<resources xmlns:tools="http://schemas.android.com/tools">

	<string name="range__title">Tube Range Map</string>

	<string name="station_lines">%1$s: %2$s</string>
	<!-- CONSIDER dynamic content description based on icon -->
	<string name="station_operator_contentDescription">Station operator icon</string>

	<string name="range__nearest_location">Near %1$.4f, %2$.4f</string>
	<string name="range__nearest_empty">No stations found around here.</string>

	<!-- Configuration Strings -->
	<string name="range__config__title">Parameters</string>
	<string name="range__config__header__generator">Range Generation</string>
	<string name="range__config__header__draw">Map Overlay Drawing</string>
	<string name="range__config__header__ui">User Interface</string>
	<string name="menu__action__range__reset_generator">Reset generator defaults</string>
	<string name="menu__action__range__reset_drawing">Reset drawing defaults</string>

	<string name="range__config__missing_tooltip" process="HtmlParser" tools:ignore="TypographyQuotes"><![CDATA[
	<b>This item doesn\'t have help text.</b>
	\n
	\nPlease report the issue to the <a href="mailto:feedback@twisterrob.net">developer</a>!
	]]></string>
	<!-- If the below strings are injected as HTML make sure to set <station> as an inline element in the Code Style. -->
	<string name="range__config__journey_time">Journey time</string>
	<string name="range__config__journey_time__tooltip" process="HtmlParser"><![CDATA[
	<b>How much time do you allow for the entire journey?</b>
	(<i>measured in minutes</i>)
	Including entering/exiting the station, interchanges, and sitting on the vehicles.
	]]></string>

	<string name="range__config__journey_start">Time to first station</string>
	<string name="range__config__journey_start__tooltip" process="HtmlParser"><![CDATA[
	<b>How far are you willing to walk to enter the first station?</b>
	(<i>measured in minutes</i>)
	Think about it like going from home to the nearest station.
	]]></string>

	<string name="range__config__interchange_interstation">Allow station interchange</string>
	<string name="range__config__interchange_interstation__tooltip" process="HtmlParser" tools:ignore="TypographyQuotes"><![CDATA[
	<b>When at a station, would you leave that station and walk to another nearby station?</b>
	(<i>options are yes/no</i>)
	Where there may be no nearby line interchanges possible, leaving the station may benefit your overall journey time.
	This means you can get farther in the same amount of time.
	\nInter-station interchange examples include
	<ul>
		<li><station line="Piccadilly">North Ealing</station>⇌<station line="Central">West Acton</station></li>
		<li><station line="HammersmithAndCity">Latimer Road</station>⇌<station line="Central">White City</station></li>
		<li><station line="Circle">Royal Oak</station>⇌<station line="Bakerloo">Warwick Avenue</station></li>
		<li><station line="Overground">Hampstead Heath</station>⇌<station line="Northern">Belsize Park</station></li>
		<li><station line="Bakerloo">Regent\'s Park</station>⇌<station
			line="Metropolitan">Great Portland Street</station></li>
		<li><station line="Circle">Farringdon</station>⇌<station line="Central">Chancery Lane</station></li>
	</ul>
	<a href="https://web.archive.org/web/20160731081313/https://tfl.gov.uk/fares-and-payments/oyster/using-oyster/touching-in-and-out#on-this-page-5">
		TfL will likely count these as fully leaving/entering the system</a>.
	\nThere are some stations where you can make an interchange and TfL may count it as an intra-station interchange;
	examples of this:
	<ul>
		<li>Hammersmith (<station line="Piccadilly">Piccadilly</station>⇌<station line="Circle">Circle</station>)</li>
		<li>Shadwell (<station line="DLR">DLR</station>⇌<station line="Overground">Overground</station>)</li>
		<li>Canary Wharf (<station line="Jubilee">Jubilee</station>⇌<station line="DLR">DLR</station>)</li>
	</ul>
	However, to simplify these exceptions these are treated as inter-station interchanges by the algorithm.
	]]></string>

	<string name="range__config__walking_speed">Walking speed</string>
	<string name="range__config__walking_speed__tooltip" process="HtmlParser"><![CDATA[
	<b>What is the average speed you walk during a journey?</b>
	(<i>measured in km/h</i>)
	This will be used to calculate how much time it would take to walk between two geographic locations where only the distance known.
	]]></string>

	<string name="range__config__transfer_entry_exit">Street ⇌ Platform time</string>
	<string name="range__config__transfer_entry_exit__tooltip" process="HtmlParser"><![CDATA[
	<b>What is the average time it takes for you to enter/exit a station?</b>
	(<i>measured in minutes</i>)
	That is, to go from the street entrance to the platform to board a train,
	including passing gates, escalators, elevators, travelators and stairs.
	Entering (street ⇀ platform) and exiting (platform ↽ street) is assumed to take the same amount of time.
	]]></string>

	<string name="range__config__interchange_intrastation">Allow line interchange</string>
	<string name="range__config__interchange_intrastation__tooltip" process="HtmlParser"><![CDATA[
	<b>When at a station, would you want to transfer between trains without leaving the station?</b>
	(<i>options are yes/no</i>)
	You might want to disable this option to only allow direct journeys.
	]]></string>

	<string name="range__config__interchange_time">Interchange time</string>
	<string name="range__config__interchange_time__tooltip" process="HtmlParser" tools:ignore="TypographyQuotes"><![CDATA[
	<b>How long does it take, on average, to alight a train and board another one?</b>
	(<i>measured in minutes</i>)
	This only applies within a single station, without going to the street.
	It may range from a few seconds to several minutes, depending on the station size:
	<a href="http://www.cityam.com/226215/longest-tube-interchange-10-tube-stations-where-changing-lines-takes-longest">
		for example interchanges at Bank, Charing Cross, Kings Cross will take over a 5 minute walk</a>.
	]]></string>

	<string name="range__config__dynamic_color">Use dynamic colors</string>
	<string name="range__config__dynamic_color__tooltip" process="HtmlParser"><![CDATA[
	<b>Do you want to use TfL line colors when drawing the range map?</b>
	This can help to generate a visually pleasing and easily queriable map.
	Looking at any part of the map it is easy to determine which tube station covers that area.
	]]></string>
	<string name="range__config__range_color">Range color</string>
	<string name="range__config__range_color__tooltip" process="HtmlParser"><![CDATA[
	<b>Which color to use when drawing the map without dynamic colors?</b>
	]]></string>
	<string name="range__config__border_size">Border size</string>
	<string name="range__config__border_size__tooltip" process="HtmlParser" tools:ignore="DuplicateStrings"><![CDATA[
	<b>How thick should the border around the generated map overlay be?</b>
	]]></string>
	<string name="range__config__border_color">Border color</string>
	<string name="range__config__border_color__tooltip" process="HtmlParser" tools:ignore="DuplicateStrings"><![CDATA[
	<b>What color to use when drawing the border around the generated map overlay?</b>
	]]></string>
	<string name="range__config__pixel_density">Pixel density</string>
	<string name="range__config__pixel_density__tooltip" process="HtmlParser" tools:ignore="DuplicateStrings"><![CDATA[
	<b>The resolution of the generated map overlay.</b>
	]]></string>

	<string name="range__config__ui_show_stations">@string/pref__show_nearest__title</string>
	<string name="range__config__ui_show_stations__tooltip" process="HtmlParser"><![CDATA[
	<b>When you select a location, do you want to automatically see the nearest stations?</b>
	(<i>options are yes/no</i>)
	This is useful if you have a small screen and want to play around with the options.
	Disable to give more space for the map.
	]]></string>

	<string name="range__config__ui_show_toolbar">@string/pref__show_toolbar__title</string>
	<string name="range__config__ui_show_toolbar__tooltip" process="HtmlParser"><![CDATA[
	<b>Do you want to use the floating toolbar?</b>
	(<i>options are yes/no</i>)
	]]></string>

	<string name="range__config__ui_network_overlay">@string/pref__network_overlay__title</string>
	<string name="range__config__ui_network_overlay__tooltip" process="HtmlParser"><![CDATA[
	<b>Do you want to use tiles overlay or ground overlay for the tube network?</b>
	(<i>options are yes/no</i>)
	Yes, for tiles; when you zoom in they get smaller and nicer.
	No, for ground; they are always shown, no time is needed to load them when zoomed, but they are a mush when zoomed in too much.
	A restart is needed to take effect.
	]]></string>

</resources>
