<?xml version="1.0" encoding="utf-8"?>
<!-- Due to Preview thinking this is an openable menu, the preview is only available in layout/inc_distance_options -->
<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	<item
		android:title="@string/range__config__header__generator"
		>
		<menu>
			<group android:id="@+id/group__range__config__generator">
				<item
					android:id="@+id/option__range__config__journey_time"
					android:title="@string/range__config__journey_time"
					app:actionLayout="@layout/menu_widget_number" />
				<item
					android:id="@+id/option__range__config__journey_start"
					android:title="@string/range__config__journey_start"
					app:actionLayout="@layout/menu_widget_number" />
				<item
					android:id="@+id/option__range__config__interchange_interstation"
					android:title="@string/range__config__interchange_interstation"
					app:actionLayout="@layout/menu_widget_boolean" />
				<item
					android:id="@+id/option__range__config__walking_speed"
					android:title="@string/range__config__walking_speed"
					app:actionLayout="@layout/menu_widget_number" />
				<item
					android:id="@+id/option__range__config__transfer_entry_exit"
					android:title="@string/range__config__transfer_entry_exit"
					app:actionLayout="@layout/menu_widget_number" />
				<item
					android:id="@+id/option__range__config__interchange_intrastation"
					android:title="@string/range__config__interchange_intrastation"
					app:actionLayout="@layout/menu_widget_boolean" />
				<item
					android:id="@+id/option__range__config__interchange_time"
					android:title="@string/range__config__interchange_time"
					app:actionLayout="@layout/menu_widget_number" />
			</group>
		</menu>
	</item>
	<item
		android:title="@string/range__config__header__draw"
		>
		<menu>
			<group android:id="@+id/group__range__config__draw">
				<item
					android:id="@+id/option__range__config__dynamic_color"
					android:title="@string/range__config__dynamic_color"
					app:actionLayout="@layout/menu_widget_boolean" />
				<item
					android:id="@+id/option__range__config__range_color"
					android:title="@string/range__config__range_color"
					app:actionLayout="@layout/menu_widget_color" />
				<item
					android:id="@+id/option__range__config__border_size"
					android:title="@string/range__config__border_size"
					android:visible="@bool/in_test"
					app:actionLayout="@layout/menu_widget_number" />
				<item
					android:id="@+id/option__range__config__border_color"
					android:title="@string/range__config__border_color"
					android:visible="@bool/in_test"
					app:actionLayout="@layout/menu_widget_color" />
				<item
					android:id="@+id/option__range__config__pixel_density"
					android:title="@string/range__config__pixel_density"
					android:visible="@bool/in_test"
					app:actionLayout="@layout/menu_widget_number" />
			</group>
		</menu>
	</item>
	<item
		android:title="@string/range__config__header__ui"
		>
		<menu>
			<group android:id="@+id/group__range__config__ui">
				<item
					android:id="@+id/option__range__config__ui_show_stations"
					android:title="@string/range__config__ui_show_stations"
					app:actionLayout="@layout/menu_widget_boolean" />
				<item
					android:id="@+id/option__range__config__ui_show_toolbar"
					android:title="@string/range__config__ui_show_toolbar"
					app:actionLayout="@layout/menu_widget_boolean" />
				<item
					android:id="@+id/option__range__config__ui_network_overlay"
					android:title="@string/range__config__ui_network_overlay"
					android:visible="@bool/in_test"
					app:actionLayout="@layout/menu_widget_boolean" />
			</group>
		</menu>
	</item>
</menu>
